tdf#104554: fix iterator calculus

and avoid unexpected behaviours when pasting columns between tables

regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=f0fa43ea99ac7564f2cc7ca1d997831808056b68

http://www.cplusplus.com/reference/list/list/insert/
and http://www.cplusplus.com/reference/deque/deque/insert/
helped me to understand my mistake

Change-Id: I6ff6b84a90c7ea8db1e4d7c2d12dd191f96141ae